--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>repl.it</title>
+        <title>Gaming Site</title>
         <script src="index.js"></script>
-        <script src="index.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css" rel="stylesheet" type="text/css" />
         <link href="index.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-      <input type="text" id="search" value=""><input type="submit" id="submit">
-
+      <div class="barAndBtn">
+      <input type="text" id="search" value=""><input type="submit" for='search' id="submit" value="Search">
+    </div>
     </body>
 </html>
