--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <script src="index.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css" rel="stylesheet" type="text/css" />
         <link href="index.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri:400,700" rel="stylesheet">
     </head>
     <body>
-      <div class="barAndBtn">
-      <input type="text" id="search" value=""><input type="submit" for='search' id="submit" value="Search">
+      <div class="bb bbPadded">
+      <input type="text" class="search" value="" placeholder='search games here'><input type="submit" for='search' class="submit fadeOut" value="Search">
     </div>
     </body>
 </html>
