--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Gaming Site</title>
         <script src="index.js"></script>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css" rel="stylesheet" type="text/css" />
         <link href="index.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri:400,700" rel="stylesheet">
